--- a/src/index.css
+++ b/src/index.css
@@ -552,8 +552,8 @@ body.dark .app::before{
   /* Burger EXACTO a la derecha */
   .burger-btn{
     display:inline-flex!important;
-    position:absolute!important;
-    right:14px!important;
+    position:fixed!important;
+    right:22px!important;
     top:50%!important;
     transform:translateY(-50%)!important;
     width:36px!important;height:36px!important;
