--- a/src/index.css
+++ b/src/index.css
@@ -541,24 +541,17 @@ body.dark .app::before{
   .burger-btn{
   display:inline-flex!important;
   position:absolute!important;
-
-  right:14px!important;
+  right:22px!important;
   top:50%!important;
   transform:translateY(-50%)!important;
-
-  width:36px!important;
-  height:36px!important;
-
+  width:36px!important;height:36px!important;
   border-radius:50%!important;
   padding:0!important;
   border:none!important;
-
   background:rgba(11,46,111,.12)!important;
-
   align-items:center!important;
   justify-content:center!important;
-
-  z-index:4!important;
+  z-index:4!important
 }
 
   .burger-btn svg{width:20px!important;height:20px!important;display:block!important}
